--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ header, main, footer{
 	font-size: 45px;
 	margin-bottom: 24px;
 }
-.our-features-area, .some-facts-area, .our-sponspors-area, .love-and-enjoy-area{
+.our-features-area, .some-facts-area, .our-sponspors-area, .love-and-enjoy-area, .contact-us-area{
 	margin-bottom: 130px;
 }
 
@@ -225,6 +225,44 @@ header, main, footer{
 	text-align:center;
 	margin: 0 auto;
 	margin-bottom: 50px;
+}
+/* Contact CSS*/
+.contact-us-area {
+	display: grid;
+	grid-template-columns: repeat(2,1fr);
+}
+
+.contact-content-item label {
+	color: var(--dark-color-3);
+	font-weight: 400;
+	font-size: 16px;
+	margin-bottom: 16px;
+}
+
+.contact-content-item input,
+.contact-content-item textarea {
+	background-color: var(--white-color);
+	border: 2px solid var(--light-orange);
+	border-radius: 10px;
+	color: var(--dark-color-2);
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 15px;
+	padding: 15px;
+	width: 100%;
+	margin-top: 5px;
+}
+
+.contact-content-item input[type="submit"] {
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 23px;
+	background-color:var(--orange-color);
+	color: var(--white-color);
+	border: 0;
+	border-radius: 5px;
+	padding: 20px 25px;
+	width: 150px;
 }
 
 /* Footer Styles */
