--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,15 @@ header, main, footer{
 	border-radius: 8px;
 	padding: 20px 25px;
 	background-color: var(--orange-color);
-	border: 0;
+	border: 1px solid var(--orange-color);
 	margin-top: 30px;
+	cursor: pointer;
+	transition: 0.5s;
+}
+.primary-btn:hover{
+	color:var(--orange-color);
+	background-color: #fff0;
+	border: 1px solid var(--orange-color);
 }
 .section-title h2{
 	color:var(--dark-color-1);
@@ -252,16 +259,27 @@ header, main, footer{
 }
 
 .contact-content-item input[type="submit"] {
+	color: var(--white-color);
 	font-weight: 600;
 	font-size: 20px;
-	line-height: 23px;
-	background-color:var(--orange-color);
-	color: var(--white-color);
-	border: 0;
-	border-radius: 5px;
+	line-height: 1;
+	border-radius: 8px;
 	padding: 20px 25px;
+	background-color: var(--orange-color);
+	border: 1px solid var(--orange-color);
+	margin-top: 30px;
+	cursor: pointer;
+	transition: 0.5s;
 	width: 150px;
+
+
 }
+.contact-content-item input[type="submit"]:hover {
+	color: var(--orange-color);
+	background-color: #fff0;
+	border: 1px solid var(--orange-color);
+}
+
 
 /* Footer Styles */
 footer{
